examples/test/testpolicy3641.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3641
  namespace: namespace423
spec:
  podSelector:
    matchLabels:
      key16: value43
      key5: value4
      key18: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value28
          key30: value7
          key33: value21
      podSelector:
        matchLabels:
          key37: value6
